--- a/初级/10001-Linux的基本原则.md
+++ b/初级/10001-Linux的基本原则.md
@@ -7,3 +7,60 @@
 3、尽量避免捕获用户接口
 
 4、配置文件保存成纯文本格式
+
+
+
+GUI接口：
+
+CLI接口：
+
+​	命令提示符, prompt, bash(shell)
+
+​		#:root
+
+​		$: 普通用户
+
+​	命令:
+
+命令格式:
+
+​	命令 	选项	参数
+
+​			选项：
+
+​				短选项：-
+
+​					多个选项可以组合：-a -b = -ab
+
+​				长选项: --
+
+​					参数：命令的作用对象
+
+虚拟终端切换: ctrl + Alt + F1 - F6
+
+GUI:
+
+​	Gnome:C
+
+​	KDE:C++
+
+​	XFac
+
+CLIE:
+
+​	bash
+
+​	csh
+
+​	zsh
+
+​	ksh
+
+​	tcsh
+
+
+
+
+
+
+
