--- a/初级/10001-Linux的基本原则.md
+++ b/初级/10001-Linux的基本原则.md
@@ -11,62 +11,78 @@
 
 
 GUI接口：
-
 CLI接口：
-
-​	命令提示符, prompt, bash(shell)
-
-​		#:root
-
-​		$: 普通用户
-
-​	命令:
-
+	命令提示符, prompt, bash(shell)
+		#:root
+		$: 普通用户
+	命令:
 命令格式:
-
-​	命令 	选项	参数
-
-​			选项：
-
-​				短选项：-
-
-​					多个选项可以组合：-a -b = -ab
-
-​				长选项: --
-
-​					参数：命令的作用对象
+	命令 	选项	参数
+			选项：
+				短选项：-
+					多个选项可以组合：-a -b = -ab
+				长选项: --
+					参数：命令的作用对象
 
 虚拟终端切换: ctrl + Alt + F1 - F6
-
 GUI:
-
-​	Gnome:C
-
-​	KDE:C++
-
-​	XFac
+	Gnome:C
+	KDE:C++
+	XFac
 
 CLIE:
-
-​	bash
-
-​	csh
-
-​	zsh
-
-​	ksh
-
-​	tcsh
+	bash
+	csh
+	zsh
+	ksh
+	tcsh
 
 GUI: Graphic User Interface
+	Windows
+	X-Window
 
-​	Windows
+目录:working directory, current directory
+pwd: printing working directory
+ls
+	-l:长格式 
+		文件类型:
+			-:普通文件(f)
+			d:目录文件
+			b:块设备文件(block)
+			c:字符设备文件(character)
+			l:字符链接文件(symbolic link file)
+			p:命令管道文件(pipe)
+			s:套接字文件(socket)
+文件权限:9位,每3位一组，每一组:rwx(读，写，执行)，如r--
+文件硬链接的次数
+文件的属主(owner)
+文件的属组(group)
+文件大小(size),单位是字节
+时间戳(timestamp):最近一次被修改的时间
+	访问:access
+	修改:modify，改变文件的内容
+	改变:change,改变文件的属性或元数据，metadata:元数据
+	-h:做单位转换
+	-a:显示以.开头的隐藏文件
+	. 表示当前目录
+	.. 表示父目录
+	-d:显示目录自身属性
+	-i:index node=inode 文件索引
+	-r:逆序显示
+	-R:递归(recursive)显示
 
-​	X-Window
-
-
-
-
+cd: change directory
+	家目录:主目录，Home directory
+	cd ~USERNAME:进入指定用户的家目录
+	cd -:在当前目当和前一次所在的目录之间来回切换	
+命令类型:
+	内置命令(shell内置)
+	外部命令:在文件系统的某个路径下有一个与命令名称相应的可执行文件
+环境变量：命名的内存空间
+	printenv:打印环境变量设置
+	PATH 使用冒号分隔的一堆路径
+	hash 缓存
+type:显示指定属于哪种类型	
 
 
 
